plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.6'
    id 'io.spring.dependency-management' version '1.1.6'
    id 'jacoco'
    id 'org.sonarqube' version '5.1.0.4882'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

configurations {
    developmentOnly
    runtimeClasspath {
        extendsFrom developmentOnly
    }
    plantuml
}

repositories {
    mavenCentral()
    maven { url = "https://jitpack.io" } //pour spring-dotenv
    maven { url = "https://repo1.maven.org/maven2" } //pour biweekly
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    
    // C'est cette dépendance qui permet le Chatbot (via RestClient) et Google Maps
    implementation 'org.springframework.boot:spring-boot-starter-web' //Pour les appels REST vers Google Maps API et Google AI (Gemini)
    // WebFlux pour WebClient (utilisé par RestGeminiHttpClient)
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    implementation 'me.paulschwarz:spring-dotenv:4.0.0'
    //implementation 'com.fasterxml.jackson.core:jackson-annotations' // Inclus par défaut dans starter-web
    implementation 'com.github.mangstadt:biweekly:0.6.8' //parser

    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    
    runtimeOnly 'com.h2database:h2'
    // Driver PostgreSQL pour la connexion à la base de données configurée dans .env
    runtimeOnly 'org.postgresql:postgresql'
    
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // Dépendances pour la génération de diagrammes UML
    plantuml 'net.sourceforge.plantuml:plantuml:1.2023.13'

    // Google API Client Libraries pour la synchronisation Google Calendar
    // --- GOOGLE APIs (Avec exclusions pour éviter le crash) ---
    implementation('com.google.api-client:google-api-client:2.0.0') {
        exclude group: 'com.google.guava', module: 'listenablefuture'
        exclude group: 'org.apache.httpcomponents', module: 'httpclient'
    }
    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'
    implementation 'com.google.apis:google-api-services-calendar:v3-rev20220715-2.0.0'
    
    // Pour la gestion JSON requise par les clients Google
    implementation('com.google.http-client:google-http-client-jackson2:1.42.3') {
        exclude group: 'commons-logging', module: 'commons-logging'
    }

    // Configuration Spring Retry 
    implementation 'org.springframework.retry:spring-retry'
    implementation 'org.springframework:spring-aspects'

    // Le cœur de LangChain4j
    implementation 'dev.langchain4j:langchain4j:0.31.0'
    
    // Le connecteur spécifique pour Claude (Anthropic)
    implementation 'dev.langchain4j:langchain4j-anthropic:0.31.0'


}

tasks.named('test') {
    useJUnitPlatform()
    // Avoid Spring Boot rejecting legacy SPRING_PROFILES env var during tests
    // Remove SPRING_PROFILES from the environment passed to the forked test JVM
    environment.remove('SPRING_PROFILES')
    
    // Configuration pour charger les variables d'environnement depuis .env lors des tests
    doFirst {
        // ensure SPRING_PROFILES is not present in the environment passed to the forked test JVM
        environment.remove('SPRING_PROFILES')

        def envFile = file('.env')
        if (envFile.exists()) {
            envFile.eachLine { line ->
                line = line.trim()
                if (line && !line.startsWith('#')) {
                    def parts = line.split('=', 2)
                    if (parts.length == 2) {
                        def key = parts[0].trim()
                        def value = parts[1].trim()
                        // On évite d'écraser des variables système critiques
                        // and avoid passing deprecated Spring property names coming from .env
                        if (key.equalsIgnoreCase('SPRING_PROFILES') || key.equalsIgnoreCase('spring.profiles')) {
                            // skip legacy spring.profiles entries to prevent InvalidConfigDataPropertyException
                        } else if (key != 'PATH' && key != 'JAVA_HOME') {
                            environment key, value
                        }
                    }
                }
            }
            println ">>> .env chargé avec succès pour la tâche test"
        } else {
            println ">>> ATTENTION : Aucun fichier .env trouvé pour les tests"
        }
    }
}

jacoco {
    toolVersion = "0.8.13"
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        html.required = true
        csv.required = false
        html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
    }
}

jacocoTestCoverageVerification {
    violationRules {
        rule {
            limit {
                minimum = 0.60 // 60% de couverture minimale
            }
        }
    }
}

check.dependsOn jacocoTestCoverageVerification

// Configuration de SonarQube
sonarqube {
    properties {
        property "sonar.projectKey", "uciie_DevOps1_EDT_Intelligent"
        property "sonar.organization", "uciie"
        property "sonar.host.url", "https://sonarcloud.io"
        property "sonar.java.coveragePlugin", "jacoco"
        property "sonar.coverage.jacoco.xmlReportPaths", "${buildDir}/reports/jacoco/test/jacocoTestReport.xml"
    }
}

task generatePlantUml(type: JavaExec) {
    group = "documentation"
    description = "Génère le fichier .puml à partir des entités Java."
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'com.example.backend.utils.UmlGenerator'
    // L'argument définit où le fichier .puml sera écrit
    args = ["${projectDir}/../doc/uml/diagram_classes.puml"]
}

build.dependsOn generatePlantUml
// ./gradlew generatePlantUml pour générer manuellement les diagrammes UML

configurations.all {
    // On force l'exclusion de commons-logging qui fait planter le moteur de log de Spring Boot 3
    exclude group: 'commons-logging', module: 'commons-logging'
}